[tool.poetry]
name = "atcoder"
version = "0.1.0"
description = ""
authors = ["n4okins <n4okins.developer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
online-judge-tools = "^11.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
